--- a/aurora.html
+++ b/aurora.html
@@ -30,7 +30,7 @@
       <section>
         <h2>Скачать</h2>
         <p>Ниже — демо‑пакет, содержащий README и пример файлов. Не является реальным дистрибутивом.</p>
-        <a class="btn" href="assets/downloads/aurora-demo.zip" download>Скачать Aurora (demo)</a>
+        <a class="btn" href="assets/downloads/Aurora 0.7b.2.zip" download>Скачать Aurora</a>
       </section>
 
       <section>
