--- a/dash_launch.html
+++ b/dash_launch.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dash Launch — XSoft Demo</title>
+  <title>Dash Launch — XSoft</title>
   <link rel="stylesheet" href="assets/styles/main.css" />
 </head>
 <body>
-  <header class="site-header"><div class="container"><a class="brand" href="index.html">XSoft — Demo</a></div></header>
+  <header class="site-header"><div class="container"><a class="brand" href="index.html">XSoft</a></div></header>
   <main class="container">
     <article class="product">
-      <h1>Dash Launch <small>v3.21 (demo)</small></h1>
-      <p class="lead">Описание Dash Launch (демо).</p>
+      <h1>Dash Launch <small>v3.21</small></h1>
+      <p class="lead">Описание Dash Launch.</p>
 
       <section><h2>Описание</h2><p>Инструмент для конфигурации загрузки.</p></section>
 
       <section>
         <h2>Скачать</h2>
-        <a class="btn" href="assets/downloads/dash-launch-demo.zip" download>Скачать Dash Launch (demo)</a>
+        <a class="btn" href="assets/downloads/dash_launch_v3.21.zip" download>Скачать Dash Launch</a>
       </section>
     </article>
   </main>
