--- a/dash_launch.html
+++ b/dash_launch.html
@@ -21,7 +21,7 @@
       </section>
     </article>
   </main>
-  <footer class="site-footer"><div class="container"><p>© Demo</p></div></footer>
+  <footer class="site-footer"><div class="container"><p>©</p></div></footer>
   <script src="assets/js/main.js"></script>
 </body>
 </html>
