--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>XSoft — Каталог (демо)</title>
+  <title>XSoft — Каталог</title>
   <meta name="description" content="Демо-версия каталога программ XSoft — статический сайт, готовый для GitHub Pages."/>
   <link rel="stylesheet" href="assets/styles/main.css" />
 </head>
