--- a/aurora.html
+++ b/aurora.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aurora — XSoft Demo</title>
   <link rel="stylesheet" href="assets/styles/main.css" />
+
+
+  <!-- Favicon и иконки -->
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/icons/favicon-96x96.png" />
+  <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
+  <link rel="shortcut icon" href="assets/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png" />
+  <link rel="manifest" href="assets/icons/site.webmanifest" />
+
 </head>
 <body>
   <header class="site-header">
