Added Google snippet

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>XSoft — Каталог</title>
-  <meta name="description" content="Демо-версия каталога программ XSoft — статический сайт, готовый для GitHub Pages."/>
-  
+
+  <!-- Заголовок вкладки и сниппета -->
+  <title>XSoft — софт для Xbox 360 (Aurora, Dash Launch, FSD, Horizon, XexMenu)</title>
+
+  <!-- Описание для Google -->
+  <meta name="description" content="Скачайте Aurora 0.7b.2, Dash Launch v3.21, Freestyle Dash 3.783, Horizon 2.9, XexMenu и другое ПО для Xbox 360 на сайте XSoft.">
+
+  <!-- Open Graph (для соцсетей) -->
+  <meta property="og:title" content="XSoft — софт для Xbox 360" />
+  <meta property="og:description" content="Aurora 0.7b.2, Dash Launch v3.21, Freestyle Dash 3.783, Horizon 2.9, XexMenu и другое ПО." />
+  <meta property="og:url" content="https://xsoft.coolfiles.online" />
+  <meta property="og:type" content="website" />
+
   <!-- Стили -->
   <link rel="stylesheet" href="assets/styles/main.css" />
 
